--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "better-auth": "^1.2.5",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.487.0",
