--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "nextjs-toploader": "^3.8.16",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
-    "react-day-picker": "^8.10.1",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
